--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Gideon Roman', cursive;
+  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow-x: hidden; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+footer {
+  background-color: #8DD3BB;
+  ;
+}
+
+.mailbox {
+  background-color: #CDEAE1;
+  ;
+}
+
+.plantrip {
+  background-color: red;
+  background: url('./images/flight.png')no-repeat center/cover;
+}
+
+.plantrip1 {
+  background-color: red;
+  background: url('./images/hotels.png')no-repeat center/cover;
 }
