Commit for HotelListing

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,22 @@ button {
   background: url('./images/hotels.png')no-repeat center/cover;
 }
 
+.melbourne{
+  background: url('./images/melbourne.png')no-repeat center/cover;
+}
+
+.paris {
+  background: url('./images/paris.png')no-repeat center/cover;
+}
+
+.london {
+  background: url('./images/london.png')no-repeat center/cover;
+}
+
+.colombia {
+  background: url('./images/colombia.png')no-repeat center/cover;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
    appearance: none;
@@ -52,4 +68,8 @@ input[type="range"]::-webkit-slider-thumb {
    margin-top: -6px; /* Centers thumb on the track */
    /*custom styles*/
    background-color: #8DD3BB;
+}
+
+.lanka {
+  background-color: #8DD3BB;
 }
