--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,7 @@ input[type="range"]::-webkit-slider-thumb {
 .lanka {
   background-color: #8DD3BB;
 }
+
+.flight {
+  background-color: #8DD3BB;
+}
