--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,7 @@ input[type="range"]::-webkit-slider-thumb {
 .flight {
   background-color: #8DD3BB;
 }
+
+.payfull {
+  background-color: #8DD3BB;
+}
