--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,8 @@ input[type="range"]::-webkit-slider-thumb {
 .payfull {
   background-color: #8DD3BB;
 }
+
+.bbgreen {
+  color: #8DD3BB;
+  border-color: #8DD3BB;
+}
