--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Alegreya', serif;  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 footer {
